<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">

    <string name="cancel">取消</string>
    <string name="queding">确定</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="splash_text">HI,\n
                                交友从聊天开始,\n
                                拥有从此刻开始，\n
                                真心是最深情的表白，\n
                                欢迎来到~~平台！
    </string>

    <string name="dailog_register_or_login_bt_text">注册/登录</string>
    <string name="dailog_register_or_login_bt_tips">注册/登录即表示已阅读并同意用户协议和隐私政策</string>
    <string name="user_xy">用户协议</string>
    <string name="user_ys">隐私政策</string>

    <string name="str_register_title">手机注册</string>
    <string name="str_register_num_tips">请输入手机号</string>
    <string name="str_register_yzm_tips">获取验证码</string>
    <string name="str_register_tips">原手机号不再使用？</string>
    <string name="str_register_tips_">找回账号</string>

    <string name="str_num_error_tips">请输入正确的手机号</string>
    <string name="str_guid_next">下一步</string>
    <string name="str_guid_one_title">首先，起个靓酷的名字吧</string>
    <string name="str_guid_one_name_tips">设置昵称（0~8字符）</string>
    <string name="str_guid_one_random_name">随机昵称</string>
    <string name="str_guid_two_text_tips">我是</string>
    <string name="str_guid_two_text_age">年龄</string>
    <string name="str_guid_two_text_age_tips">%d岁</string>
    <string name="str_guid_two_text_height">身高</string>
    <string name="str_guid_two_text_height_tips">%dcm</string>
    <string name="str_guid_two_gender_age_tips">*性别、年龄注册完成后不可修改</string>
    <string name="str_man">男人</string>
    <string name="str_woman">女人</string>
    <string name="str_educate">教育信息</string>
    <string name="str_education">学历</string>
    <string name="str_school">学校</string>
    <string name="str_school_tips">请输入学校名称</string>
    <string name="str_select">请选择</string>
    <string name="str_sure">确定</string>
    <string name="str_cancel">取消</string>
    <string name="str_job_title">我是做什么的</string>
    <string name="str_job">职业</string>
    <string name="str_job_tips">请输入职业名称</string>
    <string name="str_income">收入</string>
    <string name="str_there_title">我在那里</string>
    <string name="str_job_there">工作居住地</string>
    <string name="str_hometown">我的家乡</string>
    <string name="str_about_love">关于恋爱</string>
    <string name="str_want_love">我想要的恋爱</string>
    <string name="str_love_permission">所有人可见</string>
    <string name="str_love_gender">我期待的他/她</string>
    <string name="str_avatar">我的头像</string>
    <string name="str_avatar_tips">选择好看照片做为自头像展示吧，记得露脸哦~</string>
    <string name="str_avatar_camer">上传自己的形象照</string>
    <string name="str_dialog_avatar_title">如何展示形象照？</string>
    <string name="str_dialog_avatar_tips">五官清晰本人照</string>
    <string name="str_dialog_avatar_camer_tips">以下照片不能通过审核</string>
    <string name="str_dialog_avatar_fail_one">看不清脸</string>
    <string name="str_dialog_avatar_fail_two">挡住眼睛</string>
    <string name="str_dialog_avatar_fail_three">非人物</string>
    <string name="str_dialog_avatar_pictrue">明白了，立马去选择</string>
    <string name="str_dialog_avatar_camer">没有照片？现在拍一张~</string>
    <string name="str_footprint">我最近的足迹</string>
    <string name="str_footprint_tips">选几张照片来展示生活中的我。\n照片越丰富，就越容易收到喜欢~</string>
    <string name="str_jump">跳过</string>
    <string name="str_dialog_footprint_tips">如何展示自己？</string>
    <string name="str_dialog_select_pictrue_title">最近项目</string>
    <string name="str_dialog_select_pictrue_tips">切换相册</string>

    <string name="str_dialog_photo_explain_title">给每张照片添加你的说明呗</string>
    <string name="str_dialog_photo_explain_hint">输入文字说明~（30字以内）</string>

    <string name="str_introduce">介绍一下自己</string>
    <string name="str_introduce_tips">2/3.美好的东西需要展示，如生活兴趣</string>
    <string name="str_introduce_hint">请输入至少10个字</string>

    <string name="str_select_me_title">选择符合自己的标签</string>
    <string name="str_select_me_tips">最少3个，%s会帮你生成自我介绍</string>

    <string name="str_select_he_tips">我心里的她/他</string>

    <string name="str_authentication">最后，实名一下</string>
    <string name="str_late_authentication">稍后认证</string>
    <string name="str_authentication_tips">为了保障你的交友安全，请完成实名。\n认证后即可匹配其他实名用户哦。</string>

    <string name="str_authentication_name">请输入姓名</string>
    <string name="str_authentication_user_id">请输入身份证</string>
    <string name="str_authentication_register">认证并完成注册</string>
    <string name="str_authentication_privacy_policy">详情《隐私政策》</string>
    <string name="str_authentication_artificial">遇到问题？人工认证</string>

    <string name="permission_fail_tips">被永久拒绝授权，请手动授予权限</string>


</resources>