<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_126"
        android:text="@string/str_there_title"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/margin_20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_30"
        android:text="@string/str_job_there"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/margin_16" />


    <TextView
        android:id="@+id/tv_job_there"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_30"
        android:layout_marginRight="@dimen/margin_30"
        android:background="@drawable/drawable_education_bt_bg"
        android:drawableRight="@mipmap/ic_education_down"
        android:padding="@dimen/margin_15"
        android:text="@string/str_select"
        android:textColor="@color/color_999999"
        android:textSize="@dimen/margin_16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_30"
        android:text="@string/str_hometown"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/margin_16" />

    <TextView
        android:id="@+id/tv_hometown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_30"
        android:layout_marginRight="@dimen/margin_30"
        android:background="@drawable/drawable_education_bt_bg"
        android:drawableRight="@mipmap/ic_education_down"
        android:padding="@dimen/margin_15"
        android:text="@string/str_select"
        android:textColor="@color/color_999999"
        android:textSize="@dimen/margin_16" />


</LinearLayout>
