<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_126"
        android:text="@string/str_guid_two_text_tips"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/margin_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_30">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_30"
            android:layout_weight="1">


            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@drawable/drawalbe_gender_man_selector"
                android:button="@null"
                android:checked="true"
                android:clickable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_25"
                android:text="@string/str_man"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/margin_16" />

        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_30"
            android:layout_weight="1">


            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@drawable/drawalbe_gender_woman_selector"
                android:button="@null"
                android:clickable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/margin_25"
                android:text="@string/str_woman"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/margin_16" />

        </FrameLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_30">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_guid_two_text_age"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/margin_20" />

        <TextView
            android:id="@+id/tv_user_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/str_guid_two_text_age_tips"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/margin_20" />


        <SeekBar
            style="@style/CustomSeekbarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_user_age"
            android:layout_marginTop="@dimen/margin_20"
            android:max="120"
            android:min="1"
            android:progress="20" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_30">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_guid_two_text_height"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/margin_20" />

        <TextView
            android:id="@+id/tv_user_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/str_guid_two_text_height_tips"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/margin_20" />


        <SeekBar
            style="@style/CustomSeekbarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_user_height"
            android:layout_marginTop="@dimen/margin_20"
            android:max="250"
            android:min="1"
            android:progress="180" />

    </RelativeLayout>


</LinearLayout>
