<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_126"
        android:text="@string/str_avatar"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/margin_20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_30"
        android:text="@string/str_avatar_tips"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/margin_14" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_14"
        android:layout_marginRight="@dimen/margin_30">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_avatar_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTop="@mipmap/ic_avatar_camer"
            android:drawablePadding="@dimen/margin_14"
            android:gravity="center"
            android:text="@string/str_avatar_camer"
            android:textColor="@color/color_FB6065"
            android:textSize="@dimen/margin_16" />


    </FrameLayout>


</LinearLayout>
