<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_126"
        android:text="@string/str_guid_one_title"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/margin_24" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_30"
        android:background="@drawable/drawable_radius_10"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_user_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_15"
            android:layout_toLeftOf="@+id/v_line"
            android:background="@null"
            android:hint="@string/str_guid_one_name_tips"
            android:paddingTop="@dimen/margin_16"
            android:paddingBottom="@dimen/margin_16"
            android:textColorHint="@color/color_999999"
            android:textSize="@dimen/margin_16" />

        <View
            android:id="@+id/v_line"
            android:layout_width="1dp"
            android:layout_height="@dimen/margin_30"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_10"
            android:layout_toLeftOf="@+id/tv_random_name"
            android:background="@color/color_DDDDDD" />


        <TextView
            android:id="@+id/tv_random_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/margin_14"
            android:text="@string/str_guid_one_random_name"
            android:textColor="@color/color_FC546B"
            android:textSize="@dimen/margin_16" />


    </RelativeLayout>

</LinearLayout>
